--- a/backend/config/config.env.example
+++ b/backend/config/config.env.example
@@ -1,6 +1,6 @@
 # MongoDB Configuration
-MONGO_URI_STANDALONE=mongodb://127.0.0.1:27017/jvlcart
-MONGO_URI_REPLICA=mongodb://172.x.x.x:27017,192.x.x.x:27017/jvlcart?replicaSet=rs0&readPreference=primaryPreferred
+MONGO_URI_STANDALONE=mongodb://127.0.0.1:27017/favcart
+MONGO_URI_REPLICA=mongodb://172.x.x.x:27017,192.x.x.x:27017/favcart?replicaSet=rs0&readPreference=primaryPreferred
 
 # Default connection mode: standalone | replica
 MONGO_DEFAULT_MODE=standalone
