--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^20.0.0",
     "systeminformation": "^5.25.11",
     "validator": "^13.9.0"
   },
