--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,25 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^5.4.0",
+    "@stripe/stripe-js": "^8.5.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.8",
+    "countries-list": "^3.2.0",
+    "mdbreact": "^4.6.1",
+    "rc-slider": "^11.1.9",
+    "rc-tooltip": "^6.4.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
