--- a/package.json
+++ b/package.json
@@ -1,43 +1,24 @@
 {
   "name": "favcart",
-  "version": "1.0.0",
-  "description": "MERN E-commerce with MongoDB Replica Set",
-  "main": "backend/server.js",
+  "version": "2.0.0",
+  "description": "E-commerce with FastAPI Backend and React Frontend",
   "scripts": {
-    "start": "node backend/server.js",
-    "server": "nodemon backend/server.js",
+    "server": "cd backend && uvicorn main:app --reload --port 8000",
     "client": "cd frontend && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "seed": "node backend/utils/seeder.js",
     "build": "cd frontend && npm run build",
-    "install-all": "npm install && cd frontend && npm install"
+    "install-frontend": "cd frontend && npm install"
   },
   "keywords": [
     "ecommerce",
     "mongodb",
-    "replica-set",
-    "mern"
+    "fastapi",
+    "react"
   ],
   "author": "Sai",
   "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.40.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "helmet": "^6.1.5",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^7.0.10",
-    "validator": "^13.9.0"
-  },
   "devDependencies": {
-    "concurrently": "^7.6.0",
-    "nodemon": "^2.0.22"
+    "concurrently": "^7.6.0"
   },
   "engines": {
     "node": ">=16.0.0"
